fix(notifications): dismiss-button disappeared when text contents was too wide

--- a/meteor/client/styles/notifications.scss
+++ b/meteor/client/styles/notifications.scss
@@ -77,6 +77,7 @@
             flex: 1;
             padding: 10px 15px;
             cursor: default;
+            overflow: hidden;
 
             > .notification-pop-up__actions {
                 text-align: right;
